tests/ui/const-generics/slice-const-param-mismatch.adt_const_params.stderr
error[E0658]: use of unstable library feature `unsized_const_params`
  --> $DIR/slice-const-param-mismatch.rs:8:20
   |
LL | struct ConstString<const T: &'static str>;
   |                    ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unsized_const_params)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required for `&'static str` to implement `ConstParamTy_`

error[E0658]: use of unstable library feature `unsized_const_params`
  --> $DIR/slice-const-param-mismatch.rs:11:19
   |
LL | struct ConstBytes<const T: &'static [u8]>;
   |                   ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unsized_const_params)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required for `&'static [u8]` to implement `ConstParamTy_`

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:17:35
   |
LL |     let _: ConstString<"Hello"> = ConstString::<"World">;
   |            --------------------   ^^^^^^^^^^^^^^^^^^^^^^ expected `"Hello"`, found `"World"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstString<"Hello">`
              found struct `ConstString<"World">`

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:19:33
   |
LL |     let _: ConstString<"ℇ㇈↦"> = ConstString::<"ℇ㇈↥">;
   |            -------------------   ^^^^^^^^^^^^^^^^^^^^^ expected `"ℇ㇈↦"`, found `"ℇ㇈↥"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstString<"ℇ㇈↦">`
              found struct `ConstString<"ℇ㇈↥">`

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:21:33
   |
LL |     let _: ConstBytes<b"AAA"> = ConstBytes::<b"BBB">;
   |            ------------------   ^^^^^^^^^^^^^^^^^^^^ expected `b"AAA"`, found `b"BBB"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstBytes<b"AAA">`
              found struct `ConstBytes<b"BBB">`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
